<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/personal_info"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:paddingHorizontal="16dp"
            android:src="@drawable/ic_arrow_left" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_head"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/head"
            android:textColor="#333333" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/ic_head"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="15dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_app_round" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:rotation="180"
            android:src="@drawable/ic_arrow_left" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/u_name"
            android:textColor="#333333" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:textColor="@color/black"
            tools:text="@string/u_name" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_nice_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nick_name"
            android:textColor="#333333" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/nick_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1.3dp"
            android:adjustViewBounds="true"
            android:gravity="end"
            android:hint="@string/nick_name_hint"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_app_round"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:rotation="180"
            android:src="@drawable/ic_arrow_left" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_sign"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign"
            android:textColor="#333333" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1.3dp"
            android:adjustViewBounds="true"
            android:gravity="end"
            android:hint="@string/sign_empty"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_app_round"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:rotation="180"
            android:src="@drawable/ic_arrow_left" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="#333333" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:textColor="@color/black"
            tools:text="@string/email" />
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/log_out"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/selector_comment_send_btn"
        android:gravity="center"
        android:text="@string/log_out"
        android:textColor="@color/white" />
</LinearLayout>